--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ group = 'org.example'
 version = '1.0-SNAPSHOT'
 
 repositories {
+    apply plugin: 'java'
+
+    sourceCompatibility = '8'
     mavenCentral()
 }
 
