--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'net.dv8tion:JDA:5.0.0-beta.5'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
+
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 tasks.withType(JavaCompile).configureEach {
