[ADD] Token private 로직 추가, 전적 초기화 로직 추가

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ build/
 *.ipr
 out/
 !**/src/main/**/out/
+!**/src/main/java/DiscordBotToken
 !**/src/test/**/out/
+
 
 ### Eclipse ###
 .apt_generated
