--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'net.dv8tion:JDA:5.0.0-beta.5'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
 
+    implementation 'org.springframework.boot:spring-boot-maven-plugin:2.7.6'
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
